--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
 </ul>
 <ul>
 	<li>
+		[8/2024] One paper was accepted by Journal of Clinical Pathology. Title: IASLC grading system predicts distant metastases for resected lung adenocarcinoma. 
+	</li>
+</ul>
+<ul>
+	<li>
 		[7/2024] One paper was accepted as an oral paper presentation at the 110th Scientific Assembly and Annual Meeting of the Radiological Society of North America (RSNA 2024), to be held December 1-5，in Chicago, Illinois.
 	</li>
  
