--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 </ul>
 <ul>
 	<li>
+		[8/2024] I am happy to be invited as an Associate Editor for a Nature journal, npj Precision Oncology (Impact Factor: 6.8).
+	</li>
+</ul>
+<ul>
+	<li>
 		[8/2024] One paper was accepted by EBioMedicine (Impact Factor: 9.7). Title: Virtual Multiplexed Immunofluorescence Staining from Non-antibody-stained Fluorescence Imaging for Gastric Cancer Prognosis.
 	</li>
 </ul>
