--- a/index.html
+++ b/index.html
@@ -273,6 +273,13 @@
 	</ul>
 	<ul>
 	<li>
+		<a href="https://www.thelancet.com/journals/ebiom/article/PIIS2352-3964(24)00323-2/fulltext"> Virtual multiplexed immunofluorescence staining from non-antibody-stained fluorescence imaging for gastric cancer prognosis</a><br>
+		Zixia Zhou, <b>Yuming Jiang #*</b>,  Zepang Sun, Taojun Zhang, Wanying Feng, Guoxin Li, Ruijiang Li, and Lei Xing </b>.<br>    #Co-first author, *Co-corresponding Author.
+		<em>The LANCET eBioMedicine </em>, 2024. (Impact Factor: 9.7)</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
 		<a href="https://arxiv.org/pdf/2407.11448" target="_blank">cDP-MIL: Robust Multiple Instance Learning via Cascaded Dirichlet Process</a><br>
 		Yihang Chen, Tsai Hor Chan, Guosheng Yin, <b>Yuming Jiang</b>,  Lequan Yu </b>.<br>
 		<em>The European Conference on Computer Vision (ECCV) </em>, 2024. </br>
