--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 	<ul>
 	<li>
 		<a href="https://www.thelancet.com/journals/ebiom/article/PIIS2352-3964(24)00323-2/fulltext"> Virtual multiplexed immunofluorescence staining from non-antibody-stained fluorescence imaging for gastric cancer prognosis</a><br>
-		Zixia Zhou, <b>Yuming Jiang #*</b>,  Zepang Sun, Taojun Zhang, Wanying Feng, Guoxin Li, Ruijiang Li, and Lei Xing </b>.<br>    #Co-first author, *Co-corresponding Author.
+		Zixia Zhou, <b>Yuming Jiang #*</b>,  Zepang Sun, Taojun Zhang, Wanying Feng, Guoxin Li, Ruijiang Li, and Lei Xing </b>.<br>    #Co-first author, *Co-corresponding author.</br>
 		<em>The LANCET eBioMedicine </em>, 2024. (Impact Factor: 9.7)</br>
 	</li>
 	</ul>
