--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
 </ul>
 <ul>
 	<li>
+		[8/2024] I am honored to have been invited as a reviewer for the Journal of the American Medical Association (JAMA), the most prestigious medical journal with an impact factor of 63.1.  . 
+	</li>
+</ul>
+<ul>
+	<li>
 		[8/2024] One paper was accepted by Journal of Clinical Pathology. Title: IASLC grading system predicts distant metastases for resected lung adenocarcinoma. 
 	</li>
 </ul>
@@ -949,6 +954,7 @@
 	Scientific Reports <br>
 	Science Bulletin <br>
 	Nature Communications <br>
+	The Journal of the American Medical Association (JAMA) <br>
 	<p style="margin-top:3px"></p>		
 </li>
 <br>
