--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </ul>
 <ul>
 	<li>
-		[8/2024] I am honored to have been invited as a reviewer for the Journal of the American Medical Association (JAMA), the most prestigious medical journal with an impact factor of 63.1.  . 
+		[8/2024] I am honored to have been invited as a reviewer for the Journal of the American Medical Association (JAMA), the most prestigious medical journal with an impact factor of 63.1  . 
 	</li>
 </ul>
 <ul>
