--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 </ul>
 <ul>
 	<li>
+		[9/2024] I am happy to be ranked in the Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/7">Stanford List 2024.
+	</li>
+</ul>
+<ul>
+	<li>
 		[8/2024] I am happy to be invited as an Associate Editor for a Nature journal, npj Precision Oncology (Impact Factor: 6.8).
 	</li>
 </ul>
