--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 </ul>
 <ul>
 	<li>
-		[9/2024] I am happy to be ranked in the Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/7">Stanford List 2024.
+		[9/2024] I am happy to be ranked in the Top 2% of Scientists on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/7">Stanford List 2024.</a><br>
 	</li>
 </ul>
 <ul>
