--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </ul>
 <ul>
 	<li>
-		[8/2024] I am happy to be invited as an Associate Editor for a Nature journal, npj Precision Oncology (Impact Factor: 6.8) <a href="https://www.nature.com/npjprecisiononcology/editors">.</a><br>
+		[8/2024] I am happy to be invited as an Associate Editor for a Nature journal, npj Precision Oncology <a href="https://www.nature.com/npjprecisiononcology/editors"></a><br> (Impact Factor: 6.8) .
 	</li>
 </ul>
 <ul>
