--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </ul>
 <ul>
 	<li>
-		[8/2024] I am happy to be invited as an Associate Editor for <a href="https://www.nature.com/npjprecisiononcology/editors">npj Precision Oncology,</a><br> a prestigious Nature journal dedicated to cutting-edge research in precision cancer treatment.
+		[8/2024] I am happy to be invited as an Associate Editor for <a href="https://www.nature.com/npjprecisiononcology/editors">npj Precision Oncology</a>, a prestigious Nature journal dedicated to cutting-edge research in precision cancer treatment.<br> 
 	</li>
 </ul>
 <ul>
