--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841524002871" target="_blank">Texture-preserving diffusion model for CBCT-to-CT synthesis</a><br>
 		Youjian Zhang, Li Li, Jie Wang, Xinquan Yang, Haotian Zhou, Jiahui He, Yaoqin Xie, <b>Yuming Jiang</b>, Wei Sun, Xinyuan Zhang, Guanqun Zhou, Zhicheng Zhang.  <br>
-		<em>Medical Image Analysis</em>, 2024.</br>
+		<em>Medical Image Analysis</em>, 2024.(Impact Factor: 10.7)</br>
 	</li>
 	</ul>
 	
