--- a/index.html
+++ b/index.html
@@ -153,6 +153,12 @@
 </ul>
 <ul>
 	<li>
+		[10/2024] Vicky Amidon Innovation Grant in Lung Cancer Research was awarded.
+	</li>
+</ul>
+<ul>
+<ul>
+	<li>
 		[9/2024] I am happy to be ranked in the Top 2% of Scientists Worldwide on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/7">Stanford List 2024.</a><br>
 	</li>
 </ul>
