--- a/index.html
+++ b/index.html
@@ -153,8 +153,14 @@
 </ul>
 <ul>
 	<li>
+		[11/2024] I’m editing a special issue for Journal of Imaging with Dr. Wencheng Li & Dr. Xiaorui Liu: "AI-Driven Advances in Computational Pathology." It focuses on cutting-edge research at the intersection of AI and pathology.
+	</li>
+</ul>
+<ul>
+	<li>
 		[10/2024] Vicky Amidon Innovation Grant in Lung Cancer Research was awarded.
 	</li>
+
 </ul>
 <ul>
 	<li>
