--- a/index.html
+++ b/index.html
@@ -153,6 +153,16 @@
 </ul>
 <ul>
 	<li>
+		[12/2024] One gastric cancer project was awarded funding by Wake Forest Baptist Comprehensive Cancer Center (WFBCCC).<br> 
+	</li>
+</ul>
+<ul>
+	<li>
+		[12/2024] One paper was accepted by npj Digital Medicine (Impact Factor: 12.4).<br> 
+	</li>
+</ul>
+<ul>
+	<li>
 		[11/2024] I’m editing a special issue for Journal of Imaging with Dr. Wencheng Li & Dr. Xiaorui Liu: "<a href="https://www.mdpi.com/journal/jimaging/special_issues/1D119MRJ13">AI-Driven Advances in Computational Pathology</a>." It focuses on cutting-edge research at the intersection of AI and pathology.<br> 
 	</li>
 </ul>
