--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> <a href="https://zhangtaojun1.github.io/" target="_blank" style="color: #3a5779; text-decoration: none;">Taojun Zhang</a> (Master of Medicine at SMU)(Master Student, 2022-)</td></tr>
+		<tr><td> Yijun Chen</a> (BME PhD at Wake Forest University School of Medicine)</td></tr>
 	</tbody>
 	</table>
 	<br>
@@ -817,6 +817,12 @@
 	<table style="border-spacing:2px">
 	<tbody>
 		<tr><td> Hongqiu Wang (PhD Student at Hong Kong University of Science and Technology (HKUST)</td></tr>
+	</tbody>
+	</table>
+	<br>	
+	<table style="border-spacing:2px">
+	<tbody>
+		<tr><td> <a href="https://zhangtaojun1.github.io/" target="_blank" style="color: #3a5779; text-decoration: none;">Taojun Zhang</a> (PhD/Master of Medicine at SMU)</td></tr>
 	</tbody>
 	</table>
 	
