--- a/index.html
+++ b/index.html
@@ -318,6 +318,13 @@
 	</ul>
 	<ul>
 	<li>
+		<a href="https://www.nature.com/articles/s41746-024-01411-2" target="_blank">Aligning knowledge concepts to whole slide images for precise histopathology image analysis</a><br>
+		Weiqin Zhao, Ziyu Guo, Yinshuang Fan, <b>Yuming Jiang</b>, Maximus CF Yeung, Lequan Yu </b>.<br>
+		<em>npj Digital Medicine </em>, 2024. </br>
+	</li>
+	</ul>
+	<ul>
+	<li>
 		<a href="https://jitc.bmj.com/content/12/5/e008927?rss=1" target="_blank">Development and interpretation of a pathomics-driven ensemble model for predicting the response to immunotherapy in gastric cancer</a><br>
 		Zhen Han, Zhicheng Zhang, Xianqi Yang, Zhe Li, Shengtian Sang, Md Tauhidul Islam, Alyssa A Guo, Zihan Li, Xiaoyan Wang, Jing Wang, Taojun Zhang, Zepang Sun, Lequan Yu, Wei Wang, Wenjun Xiong, Guoxin Li, and <b>Yuming Jiang</b>.<br>
 		<em>The Journal for ImmunoTherapy of Cancer (JITC) </em>, 2024. (Impact Factor: 10.9)</br>
