--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </ul>
 <ul>
 	<li>
-		[12/2024] One paper was accepted by npj Digital Medicine (Impact Factor: 12.4).<br> 
+		[12/2024] One paper was accepted by Nature npj Digital Medicine (Impact Factor: 12.4).<br> 
 	</li>
 </ul>
 <ul>
@@ -320,7 +320,7 @@
 	<li>
 		<a href="https://www.nature.com/articles/s41746-024-01411-2" target="_blank">Aligning knowledge concepts to whole slide images for precise histopathology image analysis</a><br>
 		Weiqin Zhao, Ziyu Guo, Yinshuang Fan, <b>Yuming Jiang</b>, Maximus CF Yeung, Lequan Yu </b>.<br>
-		<em>npj Digital Medicine </em>, 2024. </br>
+		<em> Nature npj Digital Medicine</em>, 2024. </br>
 	</li>
 	</ul>
 	<ul>
