--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> Yijun Chen</a> (BME PhD at Wake Forest University School of Medicine)</td></tr>
+		<tr><td> Yijun Chen</a> (PhD student at Wake Forest University School of Medicine, from Biomedical Engineering and Sciences (SBES) program, Virginia Tech and Wake Forest University’s Graduate Schools)</td></tr>
 	</tbody>
 	</table>
 	<br>
@@ -832,6 +832,13 @@
 		<tr><td> <a href="https://zhangtaojun1.github.io/" target="_blank" style="color: #3a5779; text-decoration: none;">Taojun Zhang</a> (PhD/Master of Medicine at SMU)</td></tr>
 	</tbody>
 	</table>
+	<br>
+	<table style="border-spacing:2px">
+	<tbody>
+		<tr><td> Zihan Li (PhD sudent) (Curent PhD sudent at University of Washington)</td></tr>
+	</tbody>
+	</table>
+	<br>
 	
 	<br>
 	
@@ -839,7 +846,7 @@
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> Zihan Li (PhD sudent) (PhD at University of Washington)</td></tr>
+		<tr><td> Zihan Li (PhD sudent) (Curent PhD sudent at University of Washington)</td></tr>
 	</tbody>
 	</table>
 	<br>
