--- a/index.html
+++ b/index.html
@@ -829,7 +829,7 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> <a href="https://zhangtaojun1.github.io/" target="_blank" style="color: #3a5779; text-decoration: none;">Taojun Zhang</a> (PhD/Master of Medicine at SMU)</td></tr>
+		<tr><td> <a href="https://zhangtaojun1.github.io/" target="_blank" style="color: #3a5779; text-decoration: none;">Taojun Zhang</a> (PhD student of Medicine at SMU)</td></tr>
 	</tbody>
 	</table>
 	<br>
