--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
 	<br>
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> Zihan Li (PhD sudent) (Curent PhD sudent at University of Washington)</td></tr>
+		<tr><td> Zihan Li (Curent PhD sudent at University of Washington)</td></tr>
 	</tbody>
 	</table>
 	<br>
