--- a/index.html
+++ b/index.html
@@ -153,8 +153,22 @@
 </ul>
 <ul>
 	<li>
+		[01/2025] One paper on the pathology image foundation model was accepted by the Journal of Clinical Oncology (Impact Factor: 45.3), the official journal of the American Society of Clinical Oncology (ASCO) and one of the most prestigious journals in the field of cancer research. <br> 
+	</li>
+</ul>
+<ul>
+	<li>
+		[01/2025] One National Institutes of Health (NIH) R21 grant was selected for funding.<br> 
+	</li>
+</ul>
+<ul>
+</ul>
+<ul>
+	<li>
 		[12/2024] One gastric cancer project was awarded funding by Wake Forest Baptist Comprehensive Cancer Center (WFBCCC).<br> 
 	</li>
+</ul>
+<ul>	
 </ul>
 <ul>
 	<li>
