--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </ul>
 <ul>
 	<li>
-		[01/2025] One National Institutes of Health (NIH) grant was selected for funding to support our research on interpretable AI.<br> 
+		[01/2025] One research grant was selected for funding to support our research on interpretable AI.<br> 
 	</li>
 </ul>
 <ul>
