--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 </ul>
 <ul>
 	<li>
-		[12/2024] One gastric cancer project was awarded funding by Wake Forest Baptist Comprehensive Cancer Center (WFBCCC).<br> 
+		[12/2024] One research project was awarded funding by Wake Forest Baptist Comprehensive Cancer Center (WFBCCC).<br> 
 	</li>
 </ul>
 <ul>	
