--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
 </ul>
 <ul>
 	<li>
+		[01/2025] I am honored to have been invited as a reviewer for Nature Medicine, one of the most prestigious medical journal with an impact factor of 58.7 . 
+	</li>
+</ul>
+<ul>
+	<li>
 		[12/2024] One research project was awarded funding by Wake Forest Baptist Comprehensive Cancer Center (WFBCCC).<br> 
 	</li>
 </ul>
