--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
 </ul>
 <ul>
 	<li>
+		[01/2025] One paper on computational pathology was accepted by the Journal of Translational Medicine (Impact Factor: 8.4), titled "Computational Pathology Approach for Assessment of Prognosis and Immunotherapy Response in Pan-Gastrointestinal Cancer.". 
+	</li>
+</ul>
+<ul>
+	<li>
 		[01/2025] I am honored to have been invited as a reviewer for Nature Medicine, one of the most prestigious medical journal with an impact factor of 58.7 . 
 	</li>
 </ul>
