--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
 </ul>
 <ul>
 	<li>
+		[01/2025] I am honored to have given a talk in the <b>Spotlight on Innovation</b> section at the 2025 Cancer Research Retreat of Atrium Health Wake Forest Baptist Comprehensive Cancer Center. My talk focused on Computational Pathology and Precision Oncology. 
+	</li>
+</ul>
+<ul>
+	<li>
 		[01/2025] One paper on computational pathology was accepted by the Journal of Translational Medicine (Impact Factor: 8.45), titled "Computational Pathology Approach for Assessment of Prognosis and Immunotherapy Response in Pan-Gastrointestinal Cancer.". 
 	</li>
 </ul>
