--- a/index.html
+++ b/index.html
@@ -843,7 +843,14 @@
 	<br>	
 	<table style="border-spacing:2px">
 	<tbody>
-		<tr><td> Yijun Chen</a> (PhD student at Wake Forest University School of Medicine, from Biomedical Engineering and Sciences (SBES) program, Virginia Tech and Wake Forest University’s Graduate Schools)</td></tr>
+		<tr><td> Yijun Chen</a> (MPhil at USC)(PhD student at Wake Forest University School of Medicine, from Biomedical Engineering and Sciences (SBES) program, Virginia Tech and Wake Forest University’s Graduate Schools)</td></tr>
+	</tbody>
+	</table>
+	<br>
+	<br>	
+	<table style="border-spacing:2px">
+	<tbody>
+		<tr><td> Guannan He</a> (MPhil at JHU)(PhD student at Wake Forest University School of Medicine, from Biomedical Engineering and Sciences (SBES) program, Virginia Tech and Wake Forest University’s Graduate Schools)</td></tr>
 	</tbody>
 	</table>
 	<br>
