--- a/index.html
+++ b/index.html
@@ -1040,9 +1040,11 @@
 	Experimental and Therapeutic Medicine <br>
 	Disease Markers <br>
 	Clinical Interventions in Aging <br>
+	International Journal of Radiation Oncology - Biology - Physics (IJROBP) <br>
 	Scientific Reports <br>
 	Science Bulletin <br>
 	Nature Communications <br>
+	Nature Medicine <br>
 	The Journal of the American Medical Association (JAMA) <br>
 	<p style="margin-top:3px"></p>		
 </li>
