--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
 </ul>
 <ul>
 	<li>
+		[01/2025] One paper on computational pathology and foundation modeling was accepted by the IEEE Transactions on Medical Imaging (Impact Factor: 8.9). 
+	</li>
+</ul>
+<ul>
+	<li>
 		[01/2025] I am honored to have given a talk in the <b>Spotlight on Innovation</b> section at the 2025 Cancer Research Retreat of Atrium Health Wake Forest Baptist Comprehensive Cancer Center. My talk focused on Computational Pathology and Precision Oncology. 
 	</li>
 </ul>
