--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 </ul>
 <ul>
 	<li>
-		[01/2025] I am honored to have given a talk in the <b>Spotlight on Innovation</b> section at the 2025 Cancer Research Retreat of Atrium Health Wake Forest Baptist Comprehensive Cancer Center. My talk focused on Computational Pathology and Precision Oncology. 
+		[01/2025] I am honored to have given a talk in the <b>Spotlight on Innovation</b> section at the 2025 Cancer Research Retreat of Atrium Health Wake Forest Baptist Comprehensive Cancer Center. The talk focused on Computational Pathology and Precision Oncology. 
 	</li>
 </ul>
 <ul>
