--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </ul>
 <ul>
 	<li>
-		[01/2025] One paper on computational pathology and foundation modeling was accepted by the IEEE Transactions on Medical Imaging (Impact Factor: 8.9). 
+		[01/2025] One paper was accepted by the IEEE Transactions on Medical Imaging (Impact Factor: 8.9). 
 	</li>
 </ul>
 <ul>
