--- a/index.html
+++ b/index.html
@@ -163,6 +163,11 @@
 </ul>
 <ul>
 	<li>
+		[01/2025] One paper was publish in Clinical and Translational Gastroenterology (Impact Factor: 4.49), titled "Non-Invasive Assessment of VEGF and Prognosis in Gastric Cancer through Radiomic Features". 
+	</li>
+</ul>
+<ul>
+	<li>
 		[01/2025] I am honored to have given a talk in the <b>Spotlight on Innovation</b> section at the 2025 Cancer Research Retreat of Atrium Health Wake Forest Baptist Comprehensive Cancer Center. The talk focused on Computational Pathology and Precision Oncology. 
 	</li>
 </ul>
