--- a/index.html
+++ b/index.html
@@ -332,6 +332,22 @@
 	</ul>
 -->
 	<p><font face="Arial" size="4"><b>2024</b></font></p>
+        <ul>
+	<li>
+		<a href="https://journals.lww.com/ctg/fulltext/9900/noninvasive_assessment_of_vascular_endothelial.349.aspx"> Noninvasive Assessment of Vascular Endothelial Growth Factor and Prognosis in Gastric Cancer Through Radiomic Features</a><br>
+		Hao Feng, Kangneng Zhou, Qingyu Yuan, Zhiwei Liu, Taojun Zhang, Hao Chen, Benjamin Xu, Zepang Sun, Zhen Han, Hao Liu, Shitong Yu, Tao Chen, Guoxin Li, Wenlan Zhou, Jiang Yu, Weicai Huang, and <b>Yuming Jiang</b>.<br>
+		<em>Clinical and Translational Gastroenterology </em>, 2025.</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="https://www.mdpi.com/2072-6694/17/6/991"> Genomic Signature for Initial Brain Metastasis Velocity (iBMV) in Non-Small-Cell Lung Cancer Patients: The Elusive Biomarker to Predict the Development of Brain Metastases?</a><br>
+		Sarah E Glynn, Claire M Lanier, Ariel R Choi, Ralph D’Agostino Jr, Michael Farris, Mohammed Abdulhaleem, Yuezhu Wang, Margaret Smith, Jimmy Ruiz, Thomas Lycan, William Jeffrey Petty, Christina K Cramer, Stephen B Tatter, Adrian W Laxton, Jaclyn J White, Jing Su, Christopher T Whitlow, David R Soto-Pantoja, Fei Xing, <b>Yuming Jiang</b>, Michael Chan, Corbin A Helisand. <br>
+		<em>Cancers </em>, 2025. </br>
+	</li>
+	</ul>
+	
+	<p><font face="Arial" size="4"><b>2024</b></font></p>
 
 	
 	<ul>
