--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 		* indicates equal contribution; <sup>†</sup> indicates corresponding authorship.
 	</ul>
 -->
-	<p><font face="Arial" size="4"><b>2024</b></font></p>
+	<p><font face="Arial" size="4"><b>2025</b></font></p>
         <ul>
 	<li>
 		<a href="https://journals.lww.com/ctg/fulltext/9900/noninvasive_assessment_of_vascular_endothelial.349.aspx"> Noninvasive Assessment of Vascular Endothelial Growth Factor and Prognosis in Gastric Cancer Through Radiomic Features</a><br>
@@ -344,6 +344,13 @@
 		<a href="https://www.mdpi.com/2072-6694/17/6/991"> Genomic Signature for Initial Brain Metastasis Velocity (iBMV) in Non-Small-Cell Lung Cancer Patients: The Elusive Biomarker to Predict the Development of Brain Metastases?</a><br>
 		Sarah E Glynn, Claire M Lanier, Ariel R Choi, Ralph D’Agostino Jr, Michael Farris, Mohammed Abdulhaleem, Yuezhu Wang, Margaret Smith, Jimmy Ruiz, Thomas Lycan, William Jeffrey Petty, Christina K Cramer, Stephen B Tatter, Adrian W Laxton, Jaclyn J White, Jing Su, Christopher T Whitlow, David R Soto-Pantoja, Fei Xing, <b>Yuming Jiang</b>, Michael Chan, Corbin A Helisand. <br>
 		<em>Cancers </em>, 2025. </br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+		<a href="https://ieeexplore.ieee.org/abstract/document/10902534"> TAD-Graph: Enhancing Whole Slide Image Analysis via Task-Aware Subgraph Disentanglement</a><br>
+		Fuying Wang, Jiayi Xin, Weiqin Zhao, <b> Jiang, Yuming</b>, Maximus Yeung, Liansheng Wang, Lequan Yu. <br>
+		<em>IEEE Transactions on Medical Imaging </em>, 2025. </br>
 	</li>
 	</ul>
 	
