--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </ul>
 <ul>
 	<li>
-		[01/2025] One paper was publish in Clinical and Translational Gastroenterology (Impact Factor: 4.49), titled "Non-Invasive Assessment of VEGF and Prognosis in Gastric Cancer through Radiomic Features". 
+		[01/2025] One paper was published in Clinical and Translational Gastroenterology (Impact Factor: 4.49), titled "Non-Invasive Assessment of VEGF and Prognosis in Gastric Cancer through Radiomic Features". 
 	</li>
 	</li>
 </ul>
