--- a/index.html
+++ b/index.html
@@ -335,7 +335,14 @@
 	<p><font face="Arial" size="4"><b>2025</b></font></p>
         <ul>
 	<li>
-		<a href="https://journals.lww.com/ctg/fulltext/9900/noninvasive_assessment_of_vascular_endothelial.349.aspx"> Noninvasive Assessment of Vascular Endothelial Growth Factor and Prognosis in Gastric Cancer Through Radiomic Features</a><br>
+		<a href="https://ascopubs.org/doi/full/10.1200/JCO-24-01501"> Foundation Model for Predicting Prognosis and Adjuvant Therapy Benefit From Digital Pathology in GI Cancers</a><br>
+		Xiyue Wang*, <b>Yuming Jiang*</b>, Sen Yang, Fang Wang, Xiaoming Zhang, Wei Wang, Yijiang Chen, Xiaoyan Wu, Jinxi Xiang, Yuchen Li, Xiaofeng Jiang, Wei Yuan, Jing Zhang, Kun-Hsing Yu, Robyn L. Ward, Nicholas Hawkins, Jitendra Jonnagaddala, Guoxin Li, Ruijiang Li.<br> *Co-first author.</br>
+		<em>Journal of Clinical Oncology (JCO)</em>, 2025. (Impact Factor: 42.1) </br>
+	</li>
+	</ul>
+	<ul>
+	<li>
+	        <a href="https://journals.lww.com/ctg/fulltext/9900/noninvasive_assessment_of_vascular_endothelial.349.aspx"> Noninvasive Assessment of Vascular Endothelial Growth Factor and Prognosis in Gastric Cancer Through Radiomic Features</a><br>
 		Hao Feng, Kangneng Zhou, Qingyu Yuan, Zhiwei Liu, Taojun Zhang, Hao Chen, Benjamin Xu, Zepang Sun, Zhen Han, Hao Liu, Shitong Yu, Tao Chen, Guoxin Li, Wenlan Zhou, Jiang Yu, Weicai Huang, and <b>Yuming Jiang</b>.<br>
 		<em>Clinical and Translational Gastroenterology</em>, 2025.</br>
 	</li>
