--- a/index.html
+++ b/index.html
@@ -344,21 +344,21 @@
 	<li>
 	        <a href="https://journals.lww.com/ctg/fulltext/9900/noninvasive_assessment_of_vascular_endothelial.349.aspx"> Noninvasive Assessment of Vascular Endothelial Growth Factor and Prognosis in Gastric Cancer Through Radiomic Features</a><br>
 		Hao Feng, Kangneng Zhou, Qingyu Yuan, Zhiwei Liu, Taojun Zhang, Hao Chen, Benjamin Xu, Zepang Sun, Zhen Han, Hao Liu, Shitong Yu, Tao Chen, Guoxin Li, Wenlan Zhou, Jiang Yu, Weicai Huang, and <b>Yuming Jiang</b>.<br>
-		<em>Clinical and Translational Gastroenterology</em>, 2025.</br>
+		<em>Clinical and Translational Gastroenterology</em>, 2025.(Impact Factor: 4.49)</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://www.mdpi.com/2072-6694/17/6/991"> Genomic Signature for Initial Brain Metastasis Velocity (iBMV) in Non-Small-Cell Lung Cancer Patients: The Elusive Biomarker to Predict the Development of Brain Metastases?</a><br>
 		Sarah E Glynn, Claire M Lanier, Ariel R Choi, Ralph D’Agostino Jr, Michael Farris, Mohammed Abdulhaleem, Yuezhu Wang, Margaret Smith, Jimmy Ruiz, Thomas Lycan, William Jeffrey Petty, Christina K Cramer, Stephen B Tatter, Adrian W Laxton, Jaclyn J White, Jing Su, Christopher T Whitlow, David R Soto-Pantoja, Fei Xing, <b>Yuming Jiang</b>, Michael Chan, Corbin A Helisand. <br>
-		<em>Cancers</em>, 2025. </br>
+		<em>Cancers</em>, 2025. (Impact Factor: 4.5) </br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://ieeexplore.ieee.org/abstract/document/10902534"> TAD-Graph: Enhancing Whole Slide Image Analysis via Task-Aware Subgraph Disentanglement</a><br>
 		Fuying Wang, Jiayi Xin, Weiqin Zhao, <b>Yuming Jiang</b>, Maximus Yeung, Liansheng Wang, Lequan Yu. <br>
-		<em>IEEE Transactions on Medical Imaging</em>, 2025. </br>
+		<em>IEEE Transactions on Medical Imaging</em>, 2025. (Impact Factor: 8.9)</br>
 	</li>
 	</ul>
 	
@@ -390,7 +390,7 @@
 	<li>
 		<a href="https://www.nature.com/articles/s41746-024-01411-2" target="_blank">Aligning knowledge concepts to whole slide images for precise histopathology image analysis</a><br>
 		Weiqin Zhao, Ziyu Guo, Yinshuang Fan, <b>Yuming Jiang</b>, Maximus CF Yeung, Lequan Yu </b>.<br>
-		<em> Nature npj Digital Medicine</em>, 2024. </br>
+		<em> Nature npj Digital Medicine</em>, 2024. (Impact Factor: 12.4) </br>
 	</li>
 	</ul>
 	<ul>
