--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 </ul>
 <ul>
 	<li>
+		[05/2025] One paper was accepted by the Cell Reports Medicine (Impact Factor: 11.7). <br> 
+	</li>
+</ul>
+<ul>
+	<li>
 		[01/2025] One paper on the pathology image foundation model was accepted by the Journal of Clinical Oncology (Impact Factor: 42.1), the official journal of the American Society of Clinical Oncology (ASCO) and one of the most prestigious journals in the field of cancer research. <br> 
 	</li>
 </ul>
