--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 </ul>
 <ul>
 	<li>
+		[06/2025] One paper has been accepted by Cancers, titled "MRI-based radiomics ensemble model for predicting radiation necrosis in brain metastasis patients treated with stereotactic radiosurgery and immunotherapy." Congratulations to Yijun Chen on this achievement! <br> 
+	</li>
+</ul>
+<ul>
+	<li>
 		[05/2025] One paper was accepted by the Cell Reports Medicine (Impact Factor: 11.7). <br> 
 	</li>
 </ul>
@@ -339,6 +344,13 @@
 -->
 	<p><font face="Arial" size="4"><b>2025</b></font></p>
         <ul>
+	<li>
+		<a href="https://www.mdpi.com/2072-6694/17/12/1974"> MRI-Based Radiomics Ensemble Model for Predicting Radiation Necrosis in Brain Metastasis Patients Treated with Stereotactic Radiosurgery and Immunotherapy</a><br>
+		Yijun Chen, Corbin Helis, Christina Cramer, Michael Munley, Ariel Raimundo Choi, Josh Tan, Fei Xing, Qing Lyu, Christopher Whitlow, Jeffrey Willey, Michael Chan, and <b>Yuming Jiang</b>.<br>
+		<em>Cancers</em>, 2025. </br>
+	</li>
+	</ul>
+	 <ul>
 	<li>
 		<a href="https://ascopubs.org/doi/full/10.1200/JCO-24-01501"> Foundation Model for Predicting Prognosis and Adjuvant Therapy Benefit From Digital Pathology in GI Cancers</a><br>
 		Xiyue Wang*, <b>Yuming Jiang*</b>, Sen Yang, Fang Wang, Xiaoming Zhang, Wei Wang, Yijiang Chen, Xiaoyan Wu, Jinxi Xiang, Yuchen Li, Xiaofeng Jiang, Wei Yuan, Jing Zhang, Kun-Hsing Yu, Robyn L. Ward, Nicholas Hawkins, Jitendra Jonnagaddala, Guoxin Li, Ruijiang Li.<br> *Co-first author.</br>
