--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
 </ul>
 <ul>
 	<li>
+		[06/2025] One paper was accepted by the International Journal of Surgery (Impact Factor: 10.1). <br> 
+	</li>
+</ul>
+<ul>
+	<li>
 		[05/2025] One paper was accepted by the Cell Reports Medicine (Impact Factor: 11.7). <br> 
 	</li>
 </ul>
