--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 </ul>
 <ul>
 	<li>
+		[07/2025] One paper has been published at Nature Communications, titled "Automated cell annotation and classification on histopathology for spatial biomarker discovery." <br> 
+	</li>
+</ul>
+<ul>
+	<li>
 		[06/2025] One paper has been accepted by Cancers, titled "MRI-based radiomics ensemble model for predicting radiation necrosis in brain metastasis patients treated with stereotactic radiosurgery and immunotherapy." Congratulations to Yijun Chen on this achievement! <br> 
 	</li>
 </ul>
@@ -349,6 +354,13 @@
 -->
 	<p><font face="Arial" size="4"><b>2025</b></font></p>
         <ul>
+	<li>
+		<a href="https://www.nature.com/articles/s41467-025-61349-1#additional-information"> Automated cell annotation and classification on histopathology for spatial biomarker discovery</a><br>
+		Zhe Li, Seyed Hossein Mirjahanmardi, Rasoul Sali, Feyisope Eweje, Matthew Gopaulchan, Leon Kloker, Xiaoming Zhang, Guoxin Li, <b>Yuming Jiang</b> & Ruijiang Li.<br>
+		<em>Nature Communications</em>, 2025. </br>
+	</li>
+	</ul>
+	 <ul>
 	<li>
 		<a href="https://www.mdpi.com/2072-6694/17/12/1974"> MRI-Based Radiomics Ensemble Model for Predicting Radiation Necrosis in Brain Metastasis Patients Treated with Stereotactic Radiosurgery and Immunotherapy</a><br>
 		Yijun Chen, Corbin Helis, Christina Cramer, Michael Munley, Ariel Raimundo Choi, Josh Tan, Fei Xing, Qing Lyu, Christopher Whitlow, Jeffrey Willey, Michael Chan, and <b>Yuming Jiang</b>.<br>
