--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
 </ul>
 <ul>
 	<li>
+		[07/2025] One paper has been published at Cancer Letters, titled "Multimodal radiopathomics signature for prediction of response to immunotherapy-based combination therapy in gastric cancer using interpretable machine learning." <br> 
+	</li>
+</ul>
+<ul>
+	<li>
 		[06/2025] One paper has been accepted by Cancers, titled "MRI-based radiomics ensemble model for predicting radiation necrosis in brain metastasis patients treated with stereotactic radiosurgery and immunotherapy." Congratulations to Yijun Chen on this achievement! <br> 
 	</li>
 </ul>
@@ -361,6 +366,13 @@
 	</li>
 	</ul>
 	 <ul>
+	<li>
+		<a href="https://www.sciencedirect.com/science/article/pii/S0304383525004999?via%3Dihub"> Multimodal radiopathomics signature for prediction of response to immunotherapy-based combination therapy in gastric cancer using interpretable machine learning</a><br>
+		Weicai Huang, Xiaoyan Wang, Rou Zhong, Zhe Li, Kangneng Zhou, Qing Lyu, James Edward Han, Tao Chen, Md Tauhidul Islam, Qingyu Yuan, M. Usman Ahmad, Sitong Chen, Fan Yang, Zhijun Xu, Guoxin Li, and <b>Yuming Jiang</b>.<br>
+		<em>Cancers</em>, 2025. </br>
+	</li>
+	</ul>
+	<ul>
 	<li>
 		<a href="https://www.mdpi.com/2072-6694/17/12/1974"> MRI-Based Radiomics Ensemble Model for Predicting Radiation Necrosis in Brain Metastasis Patients Treated with Stereotactic Radiosurgery and Immunotherapy</a><br>
 		Yijun Chen, Corbin Helis, Christina Cramer, Michael Munley, Ariel Raimundo Choi, Josh Tan, Fei Xing, Qing Lyu, Christopher Whitlow, Jeffrey Willey, Michael Chan, and <b>Yuming Jiang</b>.<br>
