--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/pii/S0304383525004999?via%3Dihub"> Multimodal radiopathomics signature for prediction of response to immunotherapy-based combination therapy in gastric cancer using interpretable machine learning</a><br>
 		Weicai Huang, Xiaoyan Wang, Rou Zhong, Zhe Li, Kangneng Zhou, Qing Lyu, James Edward Han, Tao Chen, Md Tauhidul Islam, Qingyu Yuan, M. Usman Ahmad, Sitong Chen, Fan Yang, Zhijun Xu, Guoxin Li, and <b>Yuming Jiang</b>.<br>
-		<em>Cancers</em>, 2025. </br>
+		<em>Cancer Letters</em>, 2025. </br>
 	</li>
 	</ul>
 	<ul>
