--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
 </ul>
 <ul>
 	<li>
+		[07/2025] One paper has been published at Cell Reports Medicine, titled "TME-guided deep learning predicts chemotherapy and immunotherapy response in gastric cancer with attention-enhanced residual Swin Transformer." <br> 
+	</li>
+</ul>
+<ul>
+	<li>
 		[07/2025] One paper has been published at Nature Communications, titled "Automated cell annotation and classification on histopathology for spatial biomarker discovery." <br> 
 	</li>
 </ul>
@@ -365,7 +370,14 @@
 		<em>Nature Communications</em>, 2025. </br>
 	</li>
 	</ul>
-	 <ul>
+	<ul>
+	<li>
+		<a href="https://www.cell.com/cell-reports-medicine/fulltext/S2666-3791(25)00315-5"> TME-guided deep learning predicts chemotherapy and immunotherapy response in gastric cancer with attention-enhanced residual Swin Transformer</a><br>
+		Shentian Sang, Zepang Sun, Wenbo Zheng, Wei Wang, Md Tauhidul Islam, Yijun Chen, Qingyu Yuan, Chuanli Cheng, Sujuan Xi, Zhen Han, Taojun Zhang, Lin Wu, Wencheng Li, Jingjing Xie, Wanying Feng, Yan Chen, Wenjun Xiong, Jiang Yu, Guoxin Li, Zhenhui Li, <b>Yuming Jiang</b>.<br>
+		<em>Nature Communications</em>, 2025. </br>
+	</li>
+	</ul>
+	<ul>
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/pii/S0304383525004999?via%3Dihub"> Multimodal radiopathomics signature for prediction of response to immunotherapy-based combination therapy in gastric cancer using interpretable machine learning</a><br>
 		Weicai Huang, Xiaoyan Wang, Rou Zhong, Zhe Li, Kangneng Zhou, Qing Lyu, James Edward Han, Tao Chen, Md Tauhidul Islam, Qingyu Yuan, M. Usman Ahmad, Sitong Chen, Fan Yang, Zhijun Xu, Guoxin Li, and <b>Yuming Jiang</b>.<br>
