--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
 	<li>
 		<a href="https://www.cell.com/cell-reports-medicine/fulltext/S2666-3791(25)00315-5"> TME-guided deep learning predicts chemotherapy and immunotherapy response in gastric cancer with attention-enhanced residual Swin Transformer</a><br>
 		Shentian Sang, Zepang Sun, Wenbo Zheng, Wei Wang, Md Tauhidul Islam, Yijun Chen, Qingyu Yuan, Chuanli Cheng, Sujuan Xi, Zhen Han, Taojun Zhang, Lin Wu, Wencheng Li, Jingjing Xie, Wanying Feng, Yan Chen, Wenjun Xiong, Jiang Yu, Guoxin Li, Zhenhui Li, <b>Yuming Jiang</b>.<br>
-		<em>Nature Communications</em>, 2025. </br>
+		<em>Cell Reports Medicine</em>, 2025. </br>
 	</li>
 	</ul>
 	<ul>
