--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@
 </ul>
 <ul>
 	<li>
+		[07/2025] One paper has been published at International Journal of Surgery, titled "Multimodal radiopathomics approach for predictions of prognosis and immunotherapy response in patients with GC: a multicohort retrospective study." <br> 
+	</li>
+</ul>
+<ul>
+	<li>
 		[07/2025] One paper has been published at Nature Communications, titled "Automated cell annotation and classification on histopathology for spatial biomarker discovery." <br> 
 	</li>
 </ul>
