--- a/index.html
+++ b/index.html
@@ -377,6 +377,13 @@
 	</ul>
 	<ul>
 	<li>
+		<a href="https://journals.lww.com/international-journal-of-surgery/abstract/9900/multimodal_radiopathomics_approach_for_predictions.2901.aspx"> Multimodal radiopathomics approach for predictions of prognosis and immunotherapy response in patients with gastric cancer: a multicohort retrospective study</a><br>
+		Wang W, Huang W, Yang X, Fang C, Wei H, Li Z, Qiu L, Zhong R, Chen C, Yuan Q, Zhou K, Wu L, Xue Z, Zhou Z, Li Y, Xu Y, Li G, Li Z, Yun J, and <b>Jiang Y</b>.<br>
+		<em>International Journal of Surgery</em>, 2025. </br>
+	</li>
+	</ul>
+	<ul>
+	<li>
 		<a href="https://www.cell.com/cell-reports-medicine/fulltext/S2666-3791(25)00315-5"> TME-guided deep learning predicts chemotherapy and immunotherapy response in gastric cancer with attention-enhanced residual Swin Transformer</a><br>
 		Shentian Sang, Zepang Sun, Wenbo Zheng, Wei Wang, Md Tauhidul Islam, Yijun Chen, Qingyu Yuan, Chuanli Cheng, Sujuan Xi, Zhen Han, Taojun Zhang, Lin Wu, Wencheng Li, Jingjing Xie, Wanying Feng, Yan Chen, Wenjun Xiong, Jiang Yu, Guoxin Li, Zhenhui Li, and <b>Yuming Jiang</b>.<br>
 		<em>Cell Reports Medicine</em>, 2025. </br>
