--- a/index.html
+++ b/index.html
@@ -372,35 +372,35 @@
 	<li>
 		<a href="https://www.nature.com/articles/s41467-025-61349-1#additional-information"> Automated cell annotation and classification on histopathology for spatial biomarker discovery</a><br>
 		Zhe Li, Seyed Hossein Mirjahanmardi, Rasoul Sali, Feyisope Eweje, Matthew Gopaulchan, Leon Kloker, Xiaoming Zhang, Guoxin Li, <b>Yuming Jiang</b> & Ruijiang Li.<br>
-		<em>Nature Communications</em>, 2025. </br>
+		<em>Nature Communications</em>, 2025. (Impact Factor: 15.7) </br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://journals.lww.com/international-journal-of-surgery/abstract/9900/multimodal_radiopathomics_approach_for_predictions.2901.aspx"> Multimodal radiopathomics approach for predictions of prognosis and immunotherapy response in patients with gastric cancer: a multicohort retrospective study</a><br>
 		Wang W, Huang W, Yang X, Fang C, Wei H, Li Z, Qiu L, Zhong R, Chen C, Yuan Q, Zhou K, Wu L, Xue Z, Zhou Z, Li Y, Xu Y, Li G, Li Z, Yun J, and <b>Jiang Y</b>.<br>
-		<em>International Journal of Surgery</em>, 2025. </br>
+		<em>International Journal of Surgery</em>, 2025. (Impact Factor: 10.1)</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://www.cell.com/cell-reports-medicine/fulltext/S2666-3791(25)00315-5"> TME-guided deep learning predicts chemotherapy and immunotherapy response in gastric cancer with attention-enhanced residual Swin Transformer</a><br>
 		Shentian Sang, Zepang Sun, Wenbo Zheng, Wei Wang, Md Tauhidul Islam, Yijun Chen, Qingyu Yuan, Chuanli Cheng, Sujuan Xi, Zhen Han, Taojun Zhang, Lin Wu, Wencheng Li, Jingjing Xie, Wanying Feng, Yan Chen, Wenjun Xiong, Jiang Yu, Guoxin Li, Zhenhui Li, and <b>Yuming Jiang</b>.<br>
-		<em>Cell Reports Medicine</em>, 2025. </br>
+		<em>Cell Reports Medicine</em>, 2025. (Impact Factor: 10.6)</br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/pii/S0304383525004999?via%3Dihub"> Multimodal radiopathomics signature for prediction of response to immunotherapy-based combination therapy in gastric cancer using interpretable machine learning</a><br>
 		Weicai Huang, Xiaoyan Wang, Rou Zhong, Zhe Li, Kangneng Zhou, Qing Lyu, James Edward Han, Tao Chen, Md Tauhidul Islam, Qingyu Yuan, M. Usman Ahmad, Sitong Chen, Fan Yang, Zhijun Xu, Guoxin Li, and <b>Yuming Jiang</b>.<br>
-		<em>Cancer Letters</em>, 2025. </br>
+		<em>Cancer Letters</em>, 2025.(Impact Factor: 10.1) </br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://www.mdpi.com/2072-6694/17/12/1974"> MRI-Based Radiomics Ensemble Model for Predicting Radiation Necrosis in Brain Metastasis Patients Treated with Stereotactic Radiosurgery and Immunotherapy</a><br>
 		Yijun Chen, Corbin Helis, Christina Cramer, Michael Munley, Ariel Raimundo Choi, Josh Tan, Fei Xing, Qing Lyu, Christopher Whitlow, Jeffrey Willey, Michael Chan, and <b>Yuming Jiang</b>.<br>
-		<em>Cancers</em>, 2025. </br>
+		<em>Cancers</em>, 2025. (Impact Factor: 4.5) </br>
 	</li>
 	</ul>
 	 <ul>
