--- a/index.html
+++ b/index.html
@@ -153,7 +153,24 @@
 </ul>
 <ul>
 	<li>
-		[07/2025] One paper has been published at Cell Reports Medicine, titled "TME-guided deep learning predicts chemotherapy and immunotherapy response in gastric cancer with attention-enhanced residual Swin Transformer." <br> 
+		[09/2025] Gave a talk about "Integrating Radiology and Pathology Images into AI-Based Models for Precision Oncology” at the Annal Meeting of Brain Tumor Center of Excellence (BTCOE), Wake Forest University School of Medicine. " <br> 
+	</li>
+</ul>
+<ul>
+	<li>
+		[9/2025] Ranked in the Top 2% of Scientists Worldwide on <a href="https://elsevier.digitalcommonsdata.com/datasets/btchxktzyw/8">Stanford List 2025.</a><br>
+	</li>
+</ul>
+<ul>
+	<li>
+		[08/2025] Presented on AI in Interpretable Imaging and Precision Oncology at the NIH/NCI Annual Meeting. " <br> 
+	</li>
+</ul>
+<ul>
+</ul>
+<ul>
+	<li>
+		[7/2024] One paper has been published at Cell Reports Medicine, titled "TME-guided deep learning predicts chemotherapy and immunotherapy response in gastric cancer with attention-enhanced residual Swin Transformer. <br> 
 	</li>
 </ul>
 <ul>
