--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 </ul>
 <ul>
 	<li>
-		[09/2025] Gave a talk about "Integrating Radiology and Pathology Images into AI-Based Models for Precision Oncology” at the Annal Meeting of Brain Tumor Center of Excellence (BTCOE), Wake Forest University School of Medicine. " <br> 
+		[09/2025] Gave a talk about "Integrating Radiology and Pathology Images into AI-Based Models for Precision Oncology” at the Annal Meeting of Brain Tumor Center of Excellence (BTCOE), Wake Forest University School of Medicine. <br> 
 	</li>
 </ul>
 <ul>
@@ -163,7 +163,7 @@
 </ul>
 <ul>
 	<li>
-		[08/2025] Presented on AI in Interpretable Imaging and Precision Oncology at the NIH/NCI Annual Meeting. " <br> 
+		[08/2025] Presented on AI in Interpretable Imaging and Precision Oncology at the NIH/NCI Annual Meeting. <br> 
 	</li>
 </ul>
 <ul>
