--- a/index.html
+++ b/index.html
@@ -443,6 +443,13 @@
 	</ul>
 	<ul>
 	<li>
+		<a href="https://link.springer.com/article/10.1186/s12967-025-06181-3?utm_source=rct_congratemailt&utm_medium=email&utm_campaign=oa_20251014&utm_content=10.1186/s12967-025-06181-3"> Computational pathology approach for assessment of prognosis and immunotherapy response in pan-gastrointestinal cancer</a><br>
+		Zhang T, Sun Z, Li Z, Ahmad MU, Islam MT, Yang F, Yang X, Wu L, Xie J, Feng W, Chen Y, Guo AA, Li G, Wang W, Yu J, Li Z, <b>Jiang Y</b>. <br>
+		<em>Journal of Translational Medicine</em>, 2025. (Impact Factor: 7.5) </br>
+	</li>
+	</ul>
+	<ul>
+	<li>
 		<a href="https://ieeexplore.ieee.org/abstract/document/10902534"> TAD-Graph: Enhancing Whole Slide Image Analysis via Task-Aware Subgraph Disentanglement</a><br>
 		Fuying Wang, Jiayi Xin, Weiqin Zhao, <b>Yuming Jiang</b>, Maximus Yeung, Liansheng Wang, Lequan Yu. <br>
 		<em>IEEE Transactions on Medical Imaging</em>, 2025. (Impact Factor: 8.9)</br>
