--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 	</ul>
 	<ul>
 	<li>
-		<a href="https://link.springer.com/article/10.1186/s12967-025-06181-3?utm_source=rct_congratemailt&utm_medium=email&utm_campaign=oa_20251014&utm_content=10.1186/s12967-025-06181-3"> Computational pathology approach for assessment of prognosis and immunotherapy response in pan-gastrointestinal cancer</a><br>
+		<a href="https://translational-medicine.biomedcentral.com/articles/10.1186/s12967-025-06181-3"> Computational pathology approach for assessment of prognosis and immunotherapy response in pan-gastrointestinal cancer</a><br>
 		Zhang T, Sun Z, Li Z, Ahmad MU, Islam MT, Yang F, Yang X, Wu L, Xie J, Feng W, Chen Y, Guo AA, Li G, Wang W, Yu J, Li Z, <b>Jiang Y</b>. <br>
 		<em>Journal of Translational Medicine</em>, 2025. (Impact Factor: 7.5) </br>
 	</li>
