--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					North Carolina 27157<br>
 					USA<br>
 					<br>
-					Email: yumjiang@wakehealth.edu
+					Email: yuming.jiang@wfusm.edu
 			
 				</p>
 
@@ -153,8 +153,15 @@
 </ul>
 <ul>
 	<li>
+		[11/2025] Delivered an invited talk titled “Tumor Microenvironment-Informed AI: Bridging Imaging and Immunotherapy Outcomes” at the Annual Immuno-Oncology Retreat, Atrium Health Wake Forest Baptist Comprehensive Cancer Center. <br> 
+	</li>
+</ul>
+<ul>
+	<li>
 		[09/2025] Gave a talk about "Integrating Radiology and Pathology Images into AI-Based Models for Precision Oncology” at the Annal Meeting of Brain Tumor Center of Excellence (BTCOE), Wake Forest University School of Medicine. <br> 
 	</li>
+</ul>
+<ul>
 </ul>
 <ul>
 	<li>
