--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
 				<p>
 					Department of Radiation Oncology<br>
 					Atrium Health Wake Forest Baptist Comprehensive Cancer Center<br>
+					
+					<a href="https://beam.vt.edu/graduate/biomedical.html">Virginia Tech-Wake Forest University, School of Biomedical Engineering and Sciences (SBES) program</a><br>
 					Wake Forest University School of Medicine<br>
-					<a href="https://beam.vt.edu/graduate/biomedical.html">Virginia Tech-Wake Forest University, School of Biomedical Engineering and Sciences (SBES) program</a><br><br>
 					Winston Salem<br>
 					North Carolina 27157<br>
 					USA<br>
