--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 	We have Postdoc/RA openings in multimodal learning and medical image analysis. Please contact me if you are interested in this opportunity (<a href="https://www.linkedin.com/jobs/view/3844894965/?refId=a2pwnSbeRzuJ0lO%2BFxrO5g%3D%3D&trackingId=a2pwnSbeRzuJ0lO%2BFxrO5g%3D%3D" target="_blank">Details</a>).
 </p>
 <p style="color:red;">
-	We are looking for self-motivated Postdoc/PhD/RA/Interns<a href="https://beam.vt.edu/graduate/biomedical.html">Virginia Tech-Wake Forest University, School of Biomedical Engineering and Sciences (SBES) program</a>, who are interested in medical AI, multimodal learning, computational pathology, and biomedical informatics. 
+	We are looking for self-motivated Postdoc/PhD/RA/Interns (apply through <a href="https://beam.vt.edu/graduate/biomedical.html">the Virginia Tech-Wake Forest University, School of Biomedical Engineering and Sciences (SBES) program</a>), who are interested in medical AI, multimodal learning, computational pathology, and biomedical informatics. 
 	Welcome to drop me an email with your CV.</a>.
 </p>
 
