--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </ul>
 <ul>
 	<li>
-		[09/2025] Gave a talk about "Integrating Radiology and Pathology Images into AI-Based Models for Precision Oncology” at the Annal Meeting of Brain Tumor Center of Excellence (BTCOE), Wake Forest University School of Medicine. <br> 
+		[09/2025] Gave an invited talk about "Integrating Radiology and Pathology Images into AI-Based Models for Precision Oncology” at the Annal Meeting of Brain Tumor Center of Excellence (BTCOE), Wake Forest University School of Medicine. <br> 
 	</li>
 </ul>
 <ul>
