--- a/index.html
+++ b/index.html
@@ -453,6 +453,13 @@
 	</ul>
 	<ul>
 	<li>
+		<a href="https://link.springer.com/article/10.1186/s12885-025-15222-5"> A large scale multi-dataset investigation of brain metastases distribution based on primary cancer type</a><br>
+		Qing Lyu, Hongyu Yuan, Zhen Lin, Richard Barcus, Jeremy Hudson, <b>Yuming Jiang</b>, Jeongchul Kim & Christopher T. Whitlow. <br>
+		<em>BMC Cancer</em>, 2025. (Impact Factor: 3.4) </br>
+	</li>
+	</ul>
+	<ul>
+	<li>
 		<a href="https://translational-medicine.biomedcentral.com/articles/10.1186/s12967-025-06181-3"> Computational pathology approach for assessment of prognosis and immunotherapy response in pan-gastrointestinal cancer</a><br>
 		Zhang T, Sun Z, Li Z, Ahmad MU, Islam MT, Yang F, Yang X, Wu L, Xie J, Feng W, Chen Y, Guo AA, Li G, Wang W, Yu J, Li Z, <b>Jiang Y</b>. <br>
 		<em>Journal of Translational Medicine</em>, 2025. (Impact Factor: 7.5) </br>
