--- a/index.html
+++ b/index.html
@@ -446,6 +446,13 @@
 	</ul>
 	<ul>
 	<li>
+	        <a href="https://journals.lww.com/ctg/fulltext/9900/noninvasive_assessment_of_vascular_endothelial.349.aspx"> Knowledge-guided adaptation of pathology foundation models effectively improves cross-domain generalization and demographic fairness</a><br>
+		Huang Y, Zhao W, Zhang Z, Chen Y, Fu Y, Wu F, <b>Jiang Y</b>, Liang L, Wang S, Yu L.<br>
+		<em>Nature Communications</em>, 2025. (Impact Factor: 15.7)</br>
+	</li>
+	</ul>
+	<ul>
+	<li>
 		<a href="https://www.mdpi.com/2072-6694/17/6/991"> Genomic Signature for Initial Brain Metastasis Velocity (iBMV) in Non-Small-Cell Lung Cancer Patients: The Elusive Biomarker to Predict the Development of Brain Metastases?</a><br>
 		Sarah E Glynn, Claire M Lanier, Ariel R Choi, Ralph D’Agostino Jr, Michael Farris, Mohammed Abdulhaleem, Yuezhu Wang, Margaret Smith, Jimmy Ruiz, Thomas Lycan, William Jeffrey Petty, Christina K Cramer, Stephen B Tatter, Adrian W Laxton, Jaclyn J White, Jing Su, Christopher T Whitlow, David R Soto-Pantoja, Fei Xing, <b>Yuming Jiang</b>, Michael Chan, Corbin A Helisand. <br>
 		<em>Cancers</em>, 2025. (Impact Factor: 4.5) </br>
