--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 	</ul>
 	<ul>
 	<li>
-	        <a href="https://journals.lww.com/ctg/fulltext/9900/noninvasive_assessment_of_vascular_endothelial.349.aspx"> Knowledge-guided adaptation of pathology foundation models effectively improves cross-domain generalization and demographic fairness</a><br>
+	        <a href="https://www.nature.com/articles/s41467-025-66300-y"> Knowledge-guided adaptation of pathology foundation models effectively improves cross-domain generalization and demographic fairness</a><br>
 		Huang Y, Zhao W, Zhang Z, Chen Y, Fu Y, Wu F, <b>Jiang Y</b>, Liang L, Wang S, Yu L.<br>
 		<em>Nature Communications</em>, 2025. (Impact Factor: 15.7)</br>
 	</li>
