--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
 	<ul>
 	<li>
 		<a href="https://www.jci.org/articles/view/175834" target="_blank">Comprehensive assessment of immune context and immunotherapy response via noninvasive imaging in gastric cancer</a><br>
-		Zepang Sun, Taojun Zhang, M Usman Ahmad, Zixia Zhou, Liang Qiu, Kangneng Zhou, Wenjun Xiong, Jingjing Xie, Zhicheng Zhang, Chuanli Chen, Qingyu Yuan, Yan Chen, Wanying Feng, Yikai Xu, Lequan Yu, Wei Wang, Jiang Yu, Guoxin Li, <b>Yuming Jiang</b>.<br>
+		Z Sun, T Zhang, M Usman Ahmad, Z Zhou, L Qiu, K Zhou, W Xiong, J Xie, Z Zhang, C Chen, Q Yuan, Y Chen, W Feng, Y Xu, L Yu, W Wang, J Yu, G Li, <b>Y Jiang</b>.<br>
 		<em>Journal of Clinical Investigation</em>, 2024. (Impact Factor: 15.9) </br>
 	</li>
 	</ul>
@@ -543,7 +543,7 @@
 	<ul>
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S1361841524002871" target="_blank">Texture-preserving diffusion model for CBCT-to-CT synthesis</a><br>
-		Youjian Zhang, Li Li, Jie Wang, Xinquan Yang, Haotian Zhou, Jiahui He, Yaoqin Xie, <b>Yuming Jiang</b>, Wei Sun, Xinyuan Zhang, Guanqun Zhou, Zhicheng Zhang.  <br>
+		Y Zhang, L Li, J Wang, X Yang, H Zhou, J He, Y Xie, <b>Y Jiang</b>, W Sun, X Zhang, G Zhou, Z Zhang.  <br>
 		<em>Medical Image Analysis</em>, 2024.(Impact Factor: 10.7)</br>
 	</li>
 	</ul>
@@ -558,14 +558,14 @@
 	<ul>
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S136184152300258X?via%3Dihub" target="_blank">Volumetric tumor tracking from a single cone-beam X-ray projection image enabled by deep learning</a><br>
-		Jingjing Dai, Guoya Dong, Chulong Zhang, Wenfeng He, Lin Liu, Tangsheng Wang, <b>Yuming Jiang</b>, Wei Zhao, Xiang Zhao, Yaoqin Xie, Xiaokun Liang.<br>
+		J Dai, G Dong, C Zhang, W He, L Liu, T Wang, <b>Y Jiang</b>, W Zhao, X Zhao, Y Xie, X Liang.<br>
 		<em>Medical Image Analysis</em>, 2024. (Impact Factor: 10.7) </br>
 	</li>
 	</ul>
 	<ul>
 	<li>
 		<a href="https://www.sciencedirect.com/science/article/abs/pii/S136184152300244X" target="_blank">A statistical deformation model-based data augmentation method for volumetric medical image segmentation</a><br>
-		Wenfeng He, Chulong Zhang, Jingjing Dai, Lin Liu, Tangsheng Wang, Xuan Liu, <b>Yuming Jiang</b>, Na Li, Jing Xiong, Lei Wang, Yaoqin Xie, Xiaokun Liang.<br>
+		W He, C Zhang, J Dai, L Liu, T Wang, X Liu, <b>Y Jiang</b>, N Li, J Xiong, L Wang, Y Xie, X Liang.<br>
 		<em>Medical Image Analysis</em>, 2024.(Impact Factor: 10.7)</br>
 	</li>
 	</ul>
