--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
 </ul>
 <ul>
 	<li>
+		[01/2026] One paper has been accepted by Clinical Cancer Research <a href="https://aacrjournals.org/clincancerres">，an official journal of American Association for Cancer Research (AACR), titled "Non-invasive Imaging Assessment of Tertiary Lymphoid Structures and Immunotherapy Response in Gastric Cancer: A Multicenter Study." <br> 
+	</li>
+</ul>
+<ul>
+</ul>
+<ul>
+	<li>
 		[11/2025] Delivered an invited talk titled “Tumor Microenvironment-Informed AI: Bridging Imaging and Immunotherapy Outcomes” at the Annual Immuno-Oncology Retreat, Atrium Health Wake Forest Baptist Comprehensive Cancer Center. <br> 
 	</li>
 </ul>
