--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 </ul>
 <ul>
 	<li>
-		[01/2026] One paper has been accepted by Clinical Cancer Research <a href="https://aacrjournals.org/clincancerres">，an official journal of American Association for Cancer Research (AACR), titled "Non-invasive Imaging Assessment of Tertiary Lymphoid Structures and Immunotherapy Response in Gastric Cancer: A Multicenter Study." <br> 
+		[01/2026] One paper has been accepted by <a href="https://aacrjournals.org/clincancerres"> Clinical Cancer Research</a>，an official journal of American Association for Cancer Research (AACR), titled "Non-invasive Imaging Assessment of Tertiary Lymphoid Structures and Immunotherapy Response in Gastric Cancer: A Multicenter Study." <br> 
 	</li>
 </ul>
 <ul>
